maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:13: error: ':' expected but ')' found.
def keepHandOnSideWall(Int){
                          ^PledgeMaze:43: error: identifier expected but '}' found.
}
^